# analysis_tools

./: LICENSE  setup.cfg
analysis_tools/: calculator.py
analysis_tools/analysis/: fit.py  func.py
analysis_tools/data/: Untitled.ipynb  array.py  data.py  load.py  transformation.py
analysis_tools/experiment/: experiment_analysis.py
analysis_tools/plot/: Untitled.ipynb
analysis_tools_jadmo.egg-info/: PKG-INFO  SOURCES.txt
projects/strong_coupling/: experiment_sim.py
projects/strong_coupling/notebooks/HT/: .HT_wiggle_experiment.ipynb.icloud  HT_ramsey_experiment.ipynb  HT_ramsey_experiment_vqe.ipynb  HT_ramsey_simulation_detuning_search.ipynb  HT_ramsey_simulation_different_models.ipynb  HT_wiggle_experiment.ipynb  HT_wiggle_simulation.ipynb
projects/strong_coupling/notebooks/spinecho/: .Echotest.ipynb.icloud  Echotest.ipynb
projects/strong_coupling/notebooks/vqe/: .experiment_Nov19.ipynb.icloud  .experiment_Nov21_twirling_trial.ipynb.icloud  .experiment_Nov22_matched.ipynb.icloud  .experiment_Nov23_3pi2.ipynb.icloud  experiment_2018Jun18.ipynb  experiment_2018May11.ipynb  experiment_Nov17.ipynb  experiment_Nov18_error_axis.ipynb  experiment_Nov21_twirling_trial.ipynb  experiment_Nov22_matched.ipynb  experiment_summary.ipynb  simulation.ipynb
projects/strong_coupling/toolkit/: data.py  operation.py
test/: test_array.py  test_calculator.py
toolkit/: __init__.py  experiment_analysis.py  plot.py  setup.py  theory.py
vqe 07.48.14/: VQE_analysis_thesis.py  analysis_tools.py
