[metadata]
# replace with your username:
name = analysis-tools-jadmo
version = 0.0.1
url = https://github.com/jadmo/analysis_tools
author = Takahiro Tsunoda
author_email = takahirotsunoda@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6